Add extended key usages into CSR
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/pkg/util/pki/BUILD.bazel
+++ b/pkg/util/pki/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "csr.go",
         "generate.go",
+        "keyusage.go",
         "parse.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util/pki",
